...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mandatory"
            android:text="@string/topbar_mandatorybutton" />

        <Button
            android:id="@+id/enableButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="switchEnable"
            android:text="@string/topbar_disablebutton" />

    </LinearLayout>
...
